styling the who we are page

--- a/my_pages_app/templates/donate.html
+++ b/my_pages_app/templates/donate.html
@@ -1,21 +1,23 @@
 {% extends 'base.html' %} {% block content%}
-<div>
-  <img src="/static/images/donate.jpg" class="img-fluid" alt="donation image" />
+
+<div class="photo-item">
+    <img src="/static/images/Donation more.jpg" alt="" class="photo-image">
 </div>
 
-<p>
-  Street children can break out of generational poverty and become respected
-  members of the society with your help. With your help we can get our children
-  off the streets and into safe spaces that they should be in.
-</p>
+<div>
+  <p class="my-5">
+    Street children can break out of generational poverty and become respected
+    members of the society with your help. With your help we can get our children
+    off the streets and into safe spaces that they should be in.
+  </p>
 
-<p>Make a secure donation using one of the options below:</p>
-<p>Bank Name</p>
-<p>Account Name</p>
-<p>Account number</p>
+  <p>Make a secure donation using one of the options below:</p>
+  <p>Bank Name</p>
+  <p>Account Name</p>
+  <p>Account number</p>
 
-<h3>OR</h3>
-<p>Make a donation using our payment partner</p>
-<a class="btn btn-bg btn-color" href="" role="button">Make a donation</a>
-
+  <h3>OR</h3>
+  <p>Make a donation using our payment partner</p>
+  <a class="btn btn-bg btn-color" href="" role="button">Make a donation</a>
+</div>
 {% endblock %}
