--- a/my_pages_app/templates/make_an_impact.html
+++ b/my_pages_app/templates/make_an_impact.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %} {% block content%}
 
-<!-- <h1>This is the Make an Impact Page</h1> -->
+<div class="photo-item">
+  <img src="/static/images/Volunteering.jpg" alt="" class="photo-image">
+</div>
+
+
 <div class="container-fluid">
   <div class="px-5 mx-5 text-center border-bottom">
     <h1>Who We Are Looking For</h1>
