--- a/my_pages_app/templates/programs.html
+++ b/my_pages_app/templates/programs.html
@@ -1,24 +1,37 @@
 {% extends 'base.html' %} {% block content%}
 
+<div class="container-fluid p-0 yellow-section">
+    <div class="row">
+        <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+            <h1>OUR PROGRAMS</h1>
+        </div>
+        <div class="programs_item col-md-6 col-sm-12">
+            <img src="/static/images/Street Children.jpg" alt="" class="programs_image">
+        </div>
+    </div>
+   
+</div>
+
 <div class="container-fluid row">
-    <h1>Programs</h1>
     <div class="col-lg-6 px-4 mx-auto text-center fst-italic">
-        <p>The rising number of street children has become a global pandemic. The UN estimates that there are over 150 million street children in the world. In Nigeria in particular, children end up on the streets for various reasons such as the inability of their families to cater to them, being disowned by their families due to superstitious beliefs, loss of parents, sexual and domestic abuse in the home and so much more.</p>
+        <p><strong>The rising number of street children has become a global pandemic. The UN estimates that there are over 150 million street children in the world. In Nigeria in particular, children end up on the streets for various reasons such as the inability of their families to cater to them, being disowned by their families due to superstitious beliefs, loss of parents, sexual and domestic abuse in the home and so much more.</strong></p>
     </div>
 </div>
 
-<div class="container-fluid bg-danger text-white">
-    <div class="row d-flex align-items-center">
-            <div class="col-lg-4  mx-auto text-start">
-                <h2>Mobile Learning Outreach</h2>
-                <p>The Mobile Learning outreach is our flagship program which is aimed at nurturing and harnessing talents out of street children through non-traditional educational activities. We have designed a “mobile school” which will be placed in our core target areas where children will be engaged by volunteers in extracurricular activities with the aim of developing each child’s unique abilities and empowering them with the right attitude to seek a better life for themselves. We partner with both public and private sector organisations who provide us with access to their spaces to host our mobile learning programs.</p>
-                <a href="">Learn More...</a>
-            </div>
-            <div class="col-lg-4 mx-auto">
-                <img src="/static/images/classroom.jpg" style="width:100%;" alt="">
-            </div>
+<section class="pink-section">
+    <div class="container-fluid  text-white">
+        <div class="row d-flex align-items-center">
+                <div class="col-lg-4  mx-auto text-start">
+                    <h2>Mobile Learning Outreach</h2>
+                    <p>The Mobile Learning outreach is our flagship program which is aimed at nurturing and harnessing talents out of street children through non-traditional educational activities. We have designed a “mobile school” which will be placed in our core target areas where children will be engaged by volunteers in extracurricular activities with the aim of developing each child’s unique abilities and empowering them with the right attitude to seek a better life for themselves. We partner with both public and private sector organisations who provide us with access to their spaces to host our mobile learning programs.</p>
+                    <a href="">Learn More...</a>
+                </div>
+                <div class="col-lg-4 mx-auto">
+                    <img src="/static/images/classroom.jpg" style="width:100%;" alt="">
+                </div>
+        </div>
     </div>
-</div>
+</section>
 
 <div class="container-fluid">
     <div class="row d-flex flex-row-reverse align-items-center">
@@ -34,20 +47,21 @@
     </div>
 </div>
 
+<section class="pink-section">
+    <div class="container-fluid text-white">
+        <div class="row d-flex align-items-center">
+                <div class="col-lg-4  mx-auto text-start">
+                    <h2>Placement & Re-integration program</h2>
+                    <p>We believe in sustainable impact and development for street children and as such the placement and reintegration program is designed to ensure that all the street children who pass through our programs are armed with the right life and vocational skills to be able to thrive and live off the streets. We will work closely with public and private sector partners as well as SMEs to organize work placements for candidates who are deemed fit ready for reintegration by our volunteer counsellors and healthcare partners. Placements will be done based on interests and individual talents of each child to ensure that there is a good fit.</p>
+                    <a href="">Learn More...</a>
+                </div>
+                <div class="col-lg-4 mx-auto">
+                    <img src="/static/images/classroom.jpg" style="width:100%;" alt="">
+                </div>
 
-<div class="container-fluid bg-danger text-white">
-    <div class="row d-flex align-items-center">
-            <div class="col-lg-4  mx-auto text-start">
-                <h2>Placement & Re-integration program</h2>
-                <p>We believe in sustainable impact and development for street children and as such the placement and reintegration program is designed to ensure that all the street children who pass through our programs are armed with the right life and vocational skills to be able to thrive and live off the streets. We will work closely with public and private sector partners as well as SMEs to organize work placements for candidates who are deemed fit ready for reintegration by our volunteer counsellors and healthcare partners. Placements will be done based on interests and individual talents of each child to ensure that there is a good fit.</p>
-                <a href="">Learn More...</a>
-            </div>
-            <div class="col-lg-4 mx-auto">
-                <img src="/static/images/classroom.jpg" style="width:100%;" alt="">
-            </div>
-
+        </div>
     </div>
-</div>
+</section>
 
 
 <div class="container-fluid">
