--- a/my_pages_app/templates/who_we_are.html
+++ b/my_pages_app/templates/who_we_are.html
@@ -1,74 +1,112 @@
 {% extends 'base.html' %} {% block content%}
+
+<div class="container-fluid p-0 blue-section">
+  <div class="row">
+    <div class="programs_item col-md-6 col-sm-12">
+      <img src="/static/images/Volunteer Page.jpg" alt="" class="programs_image">
+    </div>
+      <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+          <h1>WHO WE ARE</h1>
+      </div>
+      
+  </div>
+ 
+</div>
     <!-- who we are -->
-    <section class="pink-section">
+    <section class="white-section">
       <div class="px-4 py-5 my-5">
-        <h1 class="display-5 fw-bold">Who We Are</h1>
         <div class="col-lg-6 mx-auto">
-          <p class="mb-4 fst-italic">
+          <p class="mb-4 fst-italic"><strong>
             Street Kids Can is a volunteer led organization committed to
             nurturing and unlocking the skills and talents of street children
             through interactive and unconventional educational resources and
             activities to boost their self-esteem, empower them and provide an
             opportunity for them to break out of generational poverty and take
-            charge of their lives for a brighter future.
+            charge of their lives for a brighter future.</strong>
           </p>
         </div>
       </div>
     </section>
 
-    <!-- our mission -->
-    <section class="white-section">
+    <!-- our mission and vision-->
+    <section class="yellow-section">
       <div class="container">
-        <div class="row align-items-center g-5 py-5 my-5">
-          <h2 class="col-lg-6">Our Mission</h2>
-          <p class="col-lg-4">
-            To empower street children to find their path out of poverty by
-            nurturing their strengths and talents through informal educational
-            activities.
-          </p>
+        <div class="row mx-auto">
+          <div class="align-items-center py-5 my-5 mx-auto col-lg-5">
+            <div class=""></div>
+              <h2 >Our Mission</h2>
+              <p>
+                To empower street children to find their path out of poverty by
+                nurturing their strengths and talents through informal educational
+                activities.
+              </p>
+          </div>
+
+          <div class="align-items-center py-5 my-5 mx-auto col-lg-5">
+            <h2>Our Vision</h2>
+            <p>
+              We envision a future where every street child is equipped with
+              skills and resources to break free from generational poverty and
+              achieve sustainable development.
+            </p>
+          </div>
         </div>
       </div>
+
     </section>
-    <!-- our vision -->
-    <section class="grey-section">
-      <div class="container py-5">
-        <div class="d-flex flex-row-reverse align-items-center g-5 py-5">
-          <h2 class="col-lg-6">Our Vision</h2>
-          <p class="col-lg-4">
-            We envision a future where every street child is equipped with
-            skills and resources to break free from generational poverty and
-            achieve sustainable development.
-          </p>
-        </div>
-      </div>
-    </section>
+  
     <!-- our values -->
     
-    <section class="white-section">
+    <section >
       <div class="container">
-        <div class="row align-items-center g-5 py-5 my-5">
-          <h2 class="col-lg-6">Our Values</h2>
-          <ul class="col-lg-4 text-start mx-auto">
-            <li>Inclusiveness</li>
-            <li>Empathy</li>
-            <li>Community</li>
-            <li>Equity</li>
-            <li>Accountability</li>
-            <li>Empowerment</li>
-            <li>Sustainability</li>
-          </ul>
+        <div class="py-5 my-5">
+          <h2>Our Values</h2>
+          <div class="text-start mx-auto d-inline-flex mt-5 row g-5">
+            <div class="d-block align-items-center col-lg-3"> 
+              <div><iconify-icon icon="icon-park-outline:oval-love" style="color: #ff4552; font-size: 160px;"></iconify-icon></div>
+              <p class="d-flex justify-content-center">Empathy</p>
+            </div>
+            <div class="d-block align-items-center col-lg-3"> 
+              <div><iconify-icon icon="arcticons:sbb-inclusive" style="color: #fdbf00; font-size: 160px;"></iconify-icon></div>
+              <p class="d-flex justify-content-center">Inclusiveness</p> 
+            </div>
+            <div class="d-block align-items-center col-lg-3"> 
+              <div><iconify-icon icon="healthicons:community-meeting-outline" style="color: #0d8bbb; font-size: 160px;"></iconify-icon></div>
+              <p class="d-flex justify-content-center">Community</p> 
+            </div>
+            <div class="d-block align-items-center col-lg-3"> 
+              <div><iconify-icon icon="fluent:equal-circle-24-regular" style="color: #ff4552; font-size: 160px;"></iconify-icon></div>
+              <p class="d-flex justify-content-center">Equity</p> 
+            </div>
+          </div>
+
+          <div class="text-start mx-auto d-inline-flex my-5 row g-5">
+            <div class="d-block align-items-center col-lg-4"> 
+              <div><iconify-icon icon="mdi:help-outline" style="color: #fdbf00; font-size: 160px;"></iconify-icon></div>
+              <p class="d-flex justify-content-center">Empowerment</p> 
+            </div>
+            <div class="d-block align-items-center col-lg-4"> 
+              <div><iconify-icon icon="uit:chart-growth" style="color: #0d8bbb; font-size: 160px;"></iconify-icon></div>
+              <p class="d-flex justify-content-center">Sustainability</p> 
+            </div>
+            <div class="d-block align-items-center col-lg-4"> 
+              <div><iconify-icon inline icon="fluent:target-arrow-16-regular" style="color: #ff4552; font-size: 160px;"></iconify-icon></div>
+              <p class="d-flex justify-content-center">Accountablity</p> 
+            </div>
+          </div>
+          </div>
           
         </div>
       </div>
     </section>
     
     <!-- Our Target -->
-    <section class="pink-section">
+    <section class="yellow-section">
 
       <div class="container">
-        <div class="d-flex flex-row-reverse align-items-center g-5 py-5 my-5">
+        <div class="row d-flex flex-row-reverse align-items-center g-5 py-5 my-5">
           <h2 class="col-lg-6">Our Target</h2>
-          <p class="col-lg-4">
+          <p class="col-lg-4 text-start">
             By the year 2032, we aim to have impacted 10,000 street kids across
             Nigeria and successfully re-integrate them into the mainstream society
             armed with the necessary mental and vocational skills to thrive and live
@@ -87,36 +125,37 @@
       <div class="container">
         <div class="row align-items-center g-5 py-5 my-5">
           <h2 class="col-lg-6">Our Approach</h2>
-          <p class="col-lg-4">
-            We believe a positive self-image is at the core of street kids’ ability
-            to reintegrate successfully into the mainstream society. Unfortunately,
-            the complex circumstances that leads to the kids ending up on the street
-            often leaves them feeling unworthy. 
-            <br>
-            As a result, range of programs are
-            designed to nurture and unlock the strengths and talents of each child
-            and help then regain their self-esteem and be more hopeful about a
-            brighter future. 
-            <br>
-            Our programs are designed to facilitate self-discovery
-            and nurture hidden talents through informal education and recreational
-            activities. Children in our programs will spend time each week across
-            different activities varying from the mobile learning school to therapy
-            and counselling sessions as well as vocational and skills acquisition
-            programs based on their individual needs.
-            <br>
-            Our volunteers and partners
-            will dedicate time each week to facilitate the programs alongside our
-            public and private sector partners who provide us with access to their
-            spaces and resources.
-          </p>
+          <div class="col-lg-4 text-start">
+            <p>  We believe a positive self-image is at the core of street kids’ ability
+              to reintegrate successfully into the mainstream society. Unfortunately,
+              the complex circumstances that leads to the kids ending up on the street
+              often leaves them feeling unworthy. </p>
+
+              <p> As a result, range of programs are
+                designed to nurture and unlock the strengths and talents of each child
+                and help then regain their self-esteem and be more hopeful about a
+                brighter future. </p>
+
+                <p> Our programs are designed to facilitate self-discovery
+                  and nurture hidden talents through informal education and recreational
+                  activities. Children in our programs will spend time each week across
+                  different activities varying from the mobile learning school to therapy
+                  and counselling sessions as well as vocational and skills acquisition
+                  programs based on their individual needs.</p>
+
+                  <p> Our volunteers and partners
+                    will dedicate time each week to facilitate the programs alongside our
+                    public and private sector partners who provide us with access to their
+                    spaces and resources.</p>
+          </div>
+      
         </div>
       </div>
     </section>
 
     <!-- Leadership -->
    
-    <section class="grey-section">
+    <section class="yellow-section">
         <div class="container py-5">
           <h2>Leadership</h2>
         <div>
@@ -129,10 +168,10 @@
     </section>
 
     <!-- Advisory Board -->
-    <section class="white-section">
+    <section class="white-section my-5">
       <h2>Advisory Board</h2>
 
-      <div class=" container-fluid row g-5">
+      <div class=" container-fluid py-2 row g-5">
         <div class="col-lg-3 col-md-4">
           <div class="leadership-image mx-auto"></div>
           <h5>Omolara Fausat Olanrewaju</h5>
