--- a/my_pages_app/templates/base.html
+++ b/my_pages_app/templates/base.html
@@ -17,24 +17,9 @@
 
     <!-- Font Awesome -->
 
-    <!-- <script src="https://kit.fontawesome.com/149ae3bfe5.js" crossorigin="anonymous"></script> -->
-    <!-- <link href="{% static 'fontawesomefree/css/all.min.css' %}" rel="stylesheet" type="text/css"> -->
-
-    <link
-      href="{% static 'fontawesomefree/css/fontawesome.css' %}"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="{% static 'fontawesomefree/css/brands.css' %}"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="{% static 'fontawesomefree/css/solid.css' %}"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
+    <link href="{% static 'fontawesomefree/css/all.min.css' %}" rel="stylesheet" type="text/css">
+   
 
     <!-- Bootstrap Css -->
 
@@ -45,28 +30,34 @@
       crossorigin="anonymous"
     />
 
-    <!-- Bootstap Scripts -->
+    <!-- Bootstrap Scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+    </script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
       integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+    </script>
 
     <!-- External Css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+
+    <!-- Iconify -->
+    <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
+
   </head>
 
   <body>
-    {% include "header.html" %} {% block content %}
-    <i class="fa-solid fa-user-chef"></i>
-    <!-- uses solid style -->
-    <i class="fa-brands fa-github-square"></i>
-    <!-- uses brand style -->
-    {% endblock %} {% include "footer.html" %}
+    {% include "header.html" %} 
+    
+    {% block content %}
+   
+    {% endblock %} 
+    
+    {% include "footer.html" %}
   </body>
 </html>
