--- a/my_pages_app/templates/get_in_touch.html
+++ b/my_pages_app/templates/get_in_touch.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %} {% block content%}
-<div class="">        
-    <img class="img-fluid" src="/static/images/passion-min.jpg" alt="contact us image">
+<div class="photo-item">
+    <img src="/static/images/passion.jpg" alt="" class="photo-image">
 </div>
-
 <div>
     <div>
         <div class="container-fluid contact_hero">
@@ -16,26 +15,26 @@
                     <div class="d-flex text-start ">
                         <div class="row">
                             <div class="col-lg-6 pt-4 pb-4">
-                                <i class="fa-light fa-phone"></i>
-                                <p>  call us </p>
+                                <i class="fa-solid fa-phone"></i>
+                                <p>call us </p>
                                 <p>0802 000 0000</p>
                             </div>
 
-                            <div class="col-lg-6 pt-4 pb-4">
-                                <i class="fa-light fa-envelope"></i> 
+                            <div class="col-lg-6 pt-4 pb-4">   
+                                <i class="fa-regular fa-envelope"></i>
                                 <p>Email us at:</p>  
                                 <p>Streetkidscan@gmail.com</p> 
                             </div>
 
-                            <div class="col-lg-6 pt-4 pb-4">
-                                <i class="fa-light fa-location-dot"></i>
+                            <div class="col-lg-6 pt-4 pb-4">  
+                                <i class="fa-regular fa-address-book"></i>
                                 <p>find us at:</p>
                                 <p>Address</p>
                                 <p>Lagos, Nigeria</p>
                             </div>
 
                             <div class="col-lg-6 pt-4 pb-4">
-                                <i class="fa-light fa-clock"></i>
+                                <i class="fa-regular fa-clock"></i> 
                                 <p>Working Hours</p>
                                 <p>Monday - Friday</p>
                                 <p>10:00am to 4:00pm</p>
