--- a/my_pages_app/templates/home.html
+++ b/my_pages_app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content%}
     <!-- hero section -->
 
-    <section id="hero" class="grey-section">
+    <section id="hero" class="white-section">
       <div class="container-fluid ">
         <div class="row pt-5 pb-5">
           <div class="col-lg-6 pt-3 pb-3">
@@ -9,21 +9,22 @@
               “You give but little when you give of your possessions. It is when you give of yourself that you truly give."
             </h2>
             <p>Kahlil Gibran</p>
-            <a class="btn btn-lg btn-bg btn-color" href="{% url 'impact' %}" role="button">Work with Us</a>
+            <button class="btn btn-lg" >Work With Us.</button>
+  
           </div>
           <div class="mx-auto col-10 col-sm-8 col-lg-6">
-            <img class="img-fluid" src="/static/images/home_smiles.jpg" alt="" />
+            <img class="img-fluid rounded-4" src="/static/images/home_smiles.jpg" alt="" />
           </div>
         </div>
       </div>
     </section>
 
     <!-- mission -->
-    <section id="mission" class="white-section">
+    <section id="mission" class="yellow-section">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-6">
-            <img class="img-fluid" src="/static/images/target3.jpg" alt="" />
+            <img class="img-fluid rounded-4" src="/static/images/target3.jpg" alt="" />
           </div>
 
           <div class="col-lg-6 align-self-center">
@@ -38,12 +39,61 @@
     </section>
 
     <!-- programs -->
-    <section id="home-programs" class="grey-section pt-4 pb-4 ">
+    <section id="home-programs" class="white-section pt-4 pb-4 ">
 
-      <h1 class="mt-5 pt-5">Our Programs</h1>
+      <h1 class="my-2 p-2">Our Programs</h1>
+
+      <div id="carouselExampleAutoplaying" class="carousel slide pt-2" data-bs-ride="carousel" data-bs-interval="2000">
+        <div class="carousel-inner">
+          <div class="carousel-item active c-item">
+            <img src="/static/images/counselling.jpg" class="d-block w-100 c-image" alt="Mobile Learning Image">
+            <div class="carousel-caption">
+              <h5>Mobile Learning Outreach</h5>
+              <p>Some quick example text to build on the card title and make up
+                        the bulk of the card's content.</p>
+              <a href="#" class="card-link">See more...</a>
+            </div>
+          </div>
+          <div class="carousel-item c-item">
+            <img src="/static/images/holding hands.jpg" class="d-block w-100 c-image" alt="...">
+            <div class="carousel-caption">
+              <h5>Mentoring & Counselling</h5>
+              <p>Some quick example text to build on the card title and make up
+                        the bulk of the card's content.</p>
+              <a href="#" class="card-link">See more...</a>
+            </div>
+          </div>
+          <div class="carousel-item c-item">
+            <img src="/static/images/Learning.jpg" class="d-block w-100 c-image" alt="...">
+            <div class="carousel-caption">
+              <h5>Placement and Reintegration</h5>
+              <p>Some quick example text to build on the card title and make up
+                        the bulk of the card's content.</p>
+              <a href="#" class="card-link">See more...</a>
+            </div>
+          </div>
+          <div class="carousel-item c-item">
+            <img src="/static/images/kids holding hands.jpg" class="d-block w-100 c-image" alt="...">
+            <div class="carousel-caption">
+              <h5>Community Support</h5>
+              <p>Some quick example text to build on the card title and make up
+                        the bulk of the card's content.</p>
+              <a href="#" class="card-link">See more...</a>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
       
       <!-- need to style the cards in a way that when it is on medium screen it is 2 in a row. -->
-      <div class="container-fluid text-start">
+      <!-- <div class="container-fluid text-start">
         <div class="card-group">
           <div class="card">
             <img src="/static/images/support.jpg" class="card-img-top" alt="program image">
@@ -83,26 +133,25 @@
         </div>
       </div>
       
-      <a class="btn btn-bg btn-color btn-lg" href="{% url 'programs' %}" role="button">Explore our programs</a>
+      <a class="btn btn-bg btn-color btn-lg" href="{% url 'programs' %}" role="button">Explore our programs</a> -->
 
-      </button>
     </section>
 
     <!-- donations -->
 
-    <section id="home-donations" class="white-section pt-5 pb-5">
+    <section id="home-donations" class="yellow-section pt-5 pb-5">
       <h1>Donations</h1>
       <p>
         Thanks to your generosity, we have received a total of N000,000,000 in
         donations which have gone towards the execution of XYZ.
       </p>
-      <h3>If you would like to donatem kindly click the button below.</h3>
+      <h3>If you would like to donate kindly click the button below.</h3>
       <a class="btn btn-bg btn-color btn-lg" href="{% url 'donate' %}" role="button">Make a donation</a>
      
     </section>
 
     <!-- sponsors -->
-    <section id="sponsors" class=" grey-section pt-5" >
+    <section id="sponsors" class=" white-section pt-5" >
         <h2>Our Sponsors Include:</h2>
         <div class="container-fluid">
             <div class="rows d-flex justify-content-center gap-3">
