before embedding mailchimp

--- a/my_pages_app/templates/get_in_touch.html
+++ b/my_pages_app/templates/get_in_touch.html
@@ -15,26 +15,26 @@
                     <div class="d-flex text-start ">
                         <div class="row">
                             <div class="col-lg-6 pt-4 pb-4">
-                                <i class="fa-solid fa-phone"></i>
+                                <i class="fa-solid fa-phone contact-icon"></i>
                                 <p>call us </p>
                                 <p>0802 000 0000</p>
                             </div>
 
                             <div class="col-lg-6 pt-4 pb-4">   
-                                <i class="fa-regular fa-envelope"></i>
+                                <i class="fa-regular fa-envelope contact-icon"></i>
                                 <p>Email us at:</p>  
                                 <p>Streetkidscan@gmail.com</p> 
                             </div>
 
                             <div class="col-lg-6 pt-4 pb-4">  
-                                <i class="fa-regular fa-address-book"></i>
+                                <i class="fa-regular fa-address-book contact-icon"></i>
                                 <p>find us at:</p>
                                 <p>Address</p>
                                 <p>Lagos, Nigeria</p>
                             </div>
 
                             <div class="col-lg-6 pt-4 pb-4">
-                                <i class="fa-regular fa-clock"></i> 
+                                <i class="fa-regular fa-clock contact-icon"></i> 
                                 <p>Working Hours</p>
                                 <p>Monday - Friday</p>
                                 <p>10:00am to 4:00pm</p>
@@ -44,7 +44,7 @@
                 </div>
 
                 
-                    <div class="col-lg-6 pt-3 pb-3">
+                    <div class="col-lg-6 pt-3 pb-3 yellow-section">
                         <h2>Get in Touch with Us. </h2>
                         <div class="container">
                             <form action="" method="post">
