--- a/my_pages_app/templates/home.html
+++ b/my_pages_app/templates/home.html
@@ -46,8 +46,8 @@
       <div id="carouselExampleAutoplaying" class="carousel slide pt-2" data-bs-ride="carousel" data-bs-interval="2000">
         <div class="carousel-inner">
           <div class="carousel-item active c-item">
-            <img src="/static/images/counselling.jpg" class="d-block w-100 c-image" alt="Mobile Learning Image">
-            <div class="carousel-caption">
+            <!-- <img src="/static/images/counselling.jpg" class="d-block w-100 c-image" alt="Mobile Learning Image"> -->
+            <div class="carousel-caption text-body">
               <h5>Mobile Learning Outreach</h5>
               <p>Some quick example text to build on the card title and make up
                         the bulk of the card's content.</p>
@@ -55,8 +55,8 @@
             </div>
           </div>
           <div class="carousel-item c-item">
-            <img src="/static/images/holding hands.jpg" class="d-block w-100 c-image" alt="...">
-            <div class="carousel-caption">
+            <!-- <img src="/static/images/holding hands.jpg" class="d-block w-100 c-image" alt="..."> -->
+            <div class="carousel-caption text-body">
               <h5>Mentoring & Counselling</h5>
               <p>Some quick example text to build on the card title and make up
                         the bulk of the card's content.</p>
@@ -64,8 +64,8 @@
             </div>
           </div>
           <div class="carousel-item c-item">
-            <img src="/static/images/Learning.jpg" class="d-block w-100 c-image" alt="...">
-            <div class="carousel-caption">
+            <!-- <img src="/static/images/Learning.jpg" class="d-block w-100 c-image" alt="..."> -->
+            <div class="carousel-caption text-body">
               <h5>Placement and Reintegration</h5>
               <p>Some quick example text to build on the card title and make up
                         the bulk of the card's content.</p>
@@ -73,8 +73,8 @@
             </div>
           </div>
           <div class="carousel-item c-item">
-            <img src="/static/images/kids holding hands.jpg" class="d-block w-100 c-image" alt="...">
-            <div class="carousel-caption">
+            <!-- <img src="/static/images/kids holding hands.jpg" class="d-block w-100 c-image" alt="..."> -->
+            <div class="carousel-caption text-body">
               <h5>Community Support</h5>
               <p>Some quick example text to build on the card title and make up
                         the bulk of the card's content.</p>
@@ -91,49 +91,6 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      
-      <!-- need to style the cards in a way that when it is on medium screen it is 2 in a row. -->
-      <!-- <div class="container-fluid text-start">
-        <div class="card-group">
-          <div class="card">
-            <img src="/static/images/support.jpg" class="card-img-top" alt="program image">
-            <div class="card-body">
-              <h5 class="card-title">Mobile Learning Outreach</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up
-                        the bulk of the card's content.</p>
-              <a href="#" class="card-link">See more...</a>
-            </div>
-          </div>
-          <div class="card">
-            <img src="/static/images/support.jpg" class="card-img-top" alt="program image">
-            <div class="card-body">
-              <h5 class="card-title">Mentoring & Counselling</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="card-link">See more...</a>
-            </div>
-          </div>
-          <div class="card">
-            <img src="/static/images/support.jpg" class="card-img-top" alt="program image">
-            <div class="card-body">
-              <h5 class="card-title">Community Support</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              <a href="#" class="card-link">See more...</a>
-          
-            </div>
-          </div>
-          <div class="card">
-            <img src="/static/images/support.jpg" class="card-img-top" alt="program image">
-            <div class="card-body">
-              <h5 class="card-title">Placement and Reintegration</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              <a href="#" class="card-link">See more...</a>
-            
-            </div>
-          </div>
-        </div>
-      </div>
-      
-      <a class="btn btn-bg btn-color btn-lg" href="{% url 'programs' %}" role="button">Explore our programs</a> -->
 
     </section>
 
@@ -154,7 +111,7 @@
     <section id="sponsors" class=" white-section pt-5" >
         <h2>Our Sponsors Include:</h2>
         <div class="container-fluid">
-            <div class="rows d-flex justify-content-center gap-3">
+            <div class="rows d-flex justify-content-center gap-5">
             <div class="volunteer-image col-sm-3"></div>
             <div class="volunteer-image col-sm-3"></div>
             <div class="volunteer-image col-sm-3"></div>
