--- a/my_pages_app/templates/make_an_impact.html
+++ b/my_pages_app/templates/make_an_impact.html
@@ -6,7 +6,7 @@
 
 
 <div class="container-fluid">
-  <div class="px-5 mx-5 text-center border-bottom">
+  <div class="mx-5 text-center border-bottom">
     <h1>Who We Are Looking For</h1>
     <p>
       We are a volunteer led organisation and our ability to impact and achieve
@@ -17,38 +17,29 @@
   </div>
 </div>
 
-<div class="px-4 text-center">
+<div class="px-4 text-center yellow-section py-5">
   <div class="col-lg-6 mx-auto pt-4">
     <h4 class="mb-5 mt-5">
       If you would like to become a part of our community of volunteers around
       the world, please fill out the form below.
     </h4>
-    <div class="row row-cols-1 row-cols-md-2 g-4">
-      <div class="col">
-        <div class="card">
+    <!-- row-cols-1 row-cols-md-2 -->
+    <div class="row g-4">
+
+      <div class="col-md-6">
+        <div class="card" style="height: 260px;">
           <div class="card-body">
-            <h5 class="card-title">Counsellors</h5>
+            <h5 class="card-title">Adhoc Volunteers</h5>
             <p class="card-text">
-              Qualified professionals who are able to offer counselling services
-              to children dealing with a wide range of life issues including
-              drug abuse.
+              As an adhoc volunteer you would - I am assuming this would refer
+              to support staff that would assist on an adhoc basis at events
+              etc.
             </p>
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Mentors</h5>
-            <p class="card-text">
-              As a mentor, you will need to be able to attend our outreach
-              events physically to meet and engage with children in our program
-              at least once a month.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
+
+      <div class="col-md-6">
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">informal Educators</h5>
@@ -62,18 +53,33 @@
           </div>
         </div>
       </div>
-      <div class="col">
+
+      <div class="col-md-6">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Adhoc Volunteers</h5>
+            <h5 class="card-title">Mentors</h5>
             <p class="card-text">
-              As an adhoc volunteer you would - I am assuming this would refer
-              to support staff that would assist on an adhoc basis at events
-              etc.
+              As a mentor, you will need to be able to attend our outreach
+              events physically to meet and engage with children in our program
+              at least once a month.
             </p>
           </div>
         </div>
       </div>
+
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Counsellors</h5>
+            <p class="card-text">
+              Qualified professionals who are able to offer counselling services
+              to children dealing with a wide range of life issues including
+              drug abuse.
+            </p>
+          </div>
+        </div>
+      </div>
+
     </div>
 
     <a
