--- a/my_pages_app/templates/who_we_are.html
+++ b/my_pages_app/templates/who_we_are.html
@@ -106,15 +106,20 @@
       <div class="container">
         <div class="row d-flex flex-row-reverse align-items-center g-5 py-5 my-5">
           <h2 class="col-lg-6">Our Target</h2>
-          <p class="col-lg-4 text-start">
-            By the year 2032, we aim to have impacted 10,000 street kids across
-            Nigeria and successfully re-integrate them into the mainstream society
-            armed with the necessary mental and vocational skills to thrive and live
-            independently off the streets. We envision our program will empower them
-            and help them break away from generational poverty through provision of
-            informal education and life skills that will prepare them for
-            sustainable development and a brighter
-          </p>
+          <div class="col-lg-4 text-start">
+            <p>
+              By the year 2032, we aim to have impacted 10,000 street kids across
+              Nigeria and successfully re-integrate them into the mainstream society
+              armed with the necessary mental and vocational skills to thrive and live
+              independently off the streets.
+            </p>
+            <p>
+              We envision our program will empower them
+              and help them break away from generational poverty through provision of
+              informal education and life skills that will prepare them for
+              sustainable development and a brighter
+            </p>
+          </div>
         </div>
       </div>
   
