--- a/my_pages_app/templates/footer.html
+++ b/my_pages_app/templates/footer.html
@@ -45,23 +45,40 @@
     </div>
 
     <div class="col-md-5 offset-md-1 mb-3">
-      <form>
-        <h5>Receive updates on upcoming events.</h5>
-        <p>Monthly digest of what's new and exciting from us.</p>
-        <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-          <label for="newsletter1" class="visually-hidden">Email address</label>
-          <input
-            id="newsletter1"
-            type="text"
-            class="form-control"
-            placeholder="Email address"
-          />
-        </div>
-        <a class="btn btn-light" href="" role="button">Subscribe</a>
+      <form action="https://gmail.us8.list-manage.com/subscribe/post?u=c14fefcb2fe395f60e0e860bf&amp;id=f8f2a924bd&amp;f_id=00407be0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
+                <h5>Receive updates on upcoming events.</h5>
+                <p>Monthly digest of what's new and exciting from us.</p>
+
+                <div class="mc-field-group">
+                  <!-- <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span></label> -->
+                  <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" required placeholder="Email address">
+                  <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                </div>
+
+                <div id="mce-responses" class="clear foot">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>    
+                
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c14fefcb2fe395f60e0e860bf_f8f2a924bd" tabindex="-1" value=""></div>
+
+                <div class="optionalParent">
+                  <div class="clear foot">
+                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-light mx-0">   
+                  </div>
+                </div>
+              </div>
       </form>
     </div>
+
   </div>
 </footer>
 
 <!-- copyright -->
 <p>© Copyright 2023 StreetKidsCan</p>
+
+
+<!-- Script -->
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
